--- a/client/src/pages/SignUpPage.css
+++ b/client/src/pages/SignUpPage.css
@@ -8,7 +8,8 @@
   font-family: 'Roboto', sans-serif;
   position: relative;
   overflow: hidden;
-  padding: 2rem 1rem;
+  padding: 2rem;
+  margin-top: -80px;
 }
 
 /* Background Gradient */
